# polimi_robotics2020

./: README.md
docs/: doc.md
src/robotics2020/: CMakeLists.txt  README.md  package.xml
src/robotics2020/cfg/: CollisionGuardParams.cfg
src/robotics2020/launch/: project.launch
src/robotics2020/msg/: CollisionGuardMsg.msg
src/robotics2020/src/: collision_guard.cpp  lla2enu.cpp  tf_broadcaster.cpp
src/robotics2020/src/srv/: distance.cpp
src/robotics2020/srv/: Distance.srv
